--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -1,37 +1,37 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Vite + React + TS</title>
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+<html lang='en'>
+<head>
+  <meta charset='UTF-8' />
+  <link
+    href='/vite.svg'
+    rel='icon'
+    type='image/svg+xml'
+  />
+  <meta
+    content='width=device-width, initial-scale=1.0'
+    name='viewport'
+  />
+  <title>SportApp</title>
+  <link
+    href='https://fonts.googleapis.com'
+    rel='preconnect'
+  />
+  <link
+    crossorigin
+    href='https://fonts.gstatic.com'
+    rel='preconnect'
+  />
+  <link
+    href='https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap'
+    rel='stylesheet'
+  />
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script
-      type="module"
-      src="/src/main.tsx"
-    ></script>
-  </body>
+<body>
+<div id='root'></div>
+<script
+  src='/src/main.tsx'
+  type='module'
+></script>
+</body>
 </html>
